[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linkook"
version = "1.1.2"
authors = [
    { name = "Jack Ju1y", email = "ju1y0x0@proton.me" },
]
description = "A tool for scanning and enumerating linked social accounts."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests>=2",
    "colorama>=0.4.6",
]

[project.scripts]
linkook = "linkook.linkook:main"
